# lgl-dnf-helper

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
data/: lgl-dnf-helper.desktop
packaging/: com.linuxgamerlife.lgl-dnf-helper.metainfo.xml  lgl-dnf-helper.spec
resources/: resources.qrc
src/: main.cpp
src/backend/: Dnf5CliBackend.cpp  Dnf5CliBackend.h  Dnf5Process.cpp  Dnf5Process.h  PackageBackend.h
src/model/: Dependency.cpp  Dependency.h  Package.cpp  Package.h  PackageQueryResult.cpp  PackageQueryResult.h
src/services/: PackageClassifier.cpp  PackageClassifier.h
src/ui/: MainWindow.cpp  MainWindow.h
src/util/: HumanSize.cpp  HumanSize.h
